--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "consign": "^0.1.6",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "express-validator": "^3.2.0",
     "mongodb": "^2.2.9"
   }
